<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Odoo</string>
    <string name="sync_label_customers">Customers</string>
    <string name="toast_information_saved">Information Saved</string>
    <string name="toast_image_size_too_large">Image size too large !</string>
    <string name="label_no_customer_found">Харилцагч алга!</string>
    <string name="label_no_product_found">Бүтээгдэхүүн алга!</string>
    <string name="message_to">Message to %s</string>
    <string name="add_internal_note">Add and internal note</string>
    <string name="internal_note_hint">Add an internal note that will not be sent to the followers</string>
    <string name="label_log_note">Log note</string>
    <string name="label_send_message"><u>Send a message</u></string>
    <string name="label_log_an_internal_note"><u>Log an internal note</u></string>
    <string name="label_version_build">Build</string>
    <string name="toast_permission_download_storage">Storage permission required to create downloaded file on your sdcard.</string>
    <string name="toast_permission_download_storage_help">Storage permission required to store downloaded files on sdcard of your phone. Please grant permission for use this feature</string>
    <string name="confirm_are_you_sure_want_to_delete">Are you sure want to delete ?</string>
    <string name="toast_record_deleted">Record deleted</string>

    <string name="title_directory">Лавлах</string>

    <string name="label_footer_count">Нийт:\u0020</string>

    <string name="label_product_name">Нэр</string>
    <string name="label_product_code">Дотоод код</string>
    <string name="label_product_price">Зарах үнэ</string>
    <string name="label_product_barcode">Зураасан код</string>
    <string name="label_product_brand">Бренд</string>
    <string name="label_product_category">Дотоод ангилал</string>
    <string name="label_product_uom">Хэмжих нэгж</string>
    <string name="label_product_taxes">Захиалагчийн татварууд</string>

    <string name="title_activity_quotation">Үнийн санал</string>
    <string name="title_activity_sale_order">Борлуулалтын захиалга</string>
    <string name="title_activity_quotation_detail">Үнийн саналын дэлгэрэнгүй</string>
    <string name="title_activity_product_info">Бараа бүтээгдэхүүн</string>
    <string name="title_activity_customer">Харилцагч</string>

    <string name="menu_label_action_draft">Үнийн санал болгох</string>
    <string name="menu_label_action_confirm">Борлуулалт батлах</string>
    <string name="menu_label_action_cancel">Цуцлах</string>
    <string name="menu_label_action_print">Хэвлэх</string>
    <string name="menu_to_draft">Ноороглох</string>

    <string name="label_sales_quotation">Үнийн санал</string>
    <string name="label_sales_sale_orders">Борлуулалтын захиалга</string>
    <string name="label_sales_not_found_quotation">Үнийн санал олдсонгүй</string>
    <string name="label_sales_not_found_sale_order">Борлуулалтын захиалга олдсонгүй</string>
    <string name="label_group_by_brand">Брэндээр</string>
    <string name="label_group_by_category">Ангилалаар</string>
    <string name="label_product_available_qty">Гарт байгаа тоо</string>
    <string name="other_brand_name">Бусад</string>

    <string name="label_sale_detail_number">№</string>
    <string name="label_sale_detail_customer">Харилцагч</string>
    <string name="label_sale_detail_date">Огноо</string>
    <string name="label_sale_detail_payment_term">Төлбөрийн нөхцөл</string>
    <string name="label_sale_detail_sale_category">Борлуулалтын төрөл</string>
    <string name="label_sale_detail_warehouse">Агуулах</string>
    <string name="label_sale_detail_price_list">Үнийн хүснэгт</string>
    <string name="label_sale_detail_vat_indication">НӨАТ-н үзүүлэлт</string>
    <string name="label_sale_detail_order_lines">Захиалгын мөр</string>
    <string name="label_sale_detail_untaxed_amount">Татваргүй дүн:</string>
    <string name="label_sale_detail_taxes">Татвар:</string>
    <string name="label_sale_detail_total">Нийт дүн:</string>
    <string name="label_sale_detail_balance_amount">Төлбөрийн үлдэгдэл:</string>
    <string name="label_sale_detail_salesman">Борлуулагч:</string>
    <string name="label_sale_order_line_virtual_available">Боломжит тоо</string>
    <string name="label_sale_order_line_quantity">Тоо ширхэг</string>
    <string name="label_sale_order_line_unit_price">Нэгж үнэ</string>
    <string name="label_sale_order_line_sub_total">Нийт</string>
    <string name="label_sale_order_count">Захиалгын тоо :</string>
    <string name="label_total_amount">| Нийт дүн :</string>
    <string name="label_total_due">| Авлага :</string>

    <string name="selection_state_draft">Үнийн санал</string>
    <string name="selection_state_sent">Үнийн санал илгээгдсэн</string>
    <string name="selection_state_cancel">Цуцлагдсан</string>
    <string name="selection_state_waiting_date">Waiting Schedule</string>
    <string name="selection_state_sale_order">Борлуулалтын захиалга</string>
    <string name="selection_state_manual">Нэхэмжлэл үүссэн</string>

    <string name="sale_customer_required">Харилцагчийг сонгоно уу!</string>
    <string name="sale_payment_term_required">Төлбөрийн нөхцөлийг сонгоно уу!</string>
    <string name="sale_warehouse_required">Агуулах сонгоно уу!</string>
    <string name="sale_pricelist_required">Үнийн хүснэгт сонгоно уу!</string>

    <string name="close_activity">Анхаар!!! Дэлгэц буцах гэж байна. Та мэдээлэлийг хадгалахгүй орхихдоо итгэлтэй байна уу?</string>
    <string name="alert_choose_yes">Тийм</string>
    <string name="alert_choose_no">Үгүй</string>
    <string name="toast_error_regist_item">Бараа бүртгэхэд алдаа гарлаа</string>
    <string name="title_activity_add_product_line_wizard">Бараа бүтээгдэхүүн</string>


    <string name="statement_state_open">Шинэ</string>
    <string name="statement_state_posted">Нээгдсэн</string>
    <string name="statement_state_confirm">Хаагдсан</string>

    <string name="label_bank_statement_detail_journal">Төлбөрийн хэлбэр</string>
    <string name="label_bank_statement_detail_date">Огноо</string>
    <string name="label_bank_statement_line_not_partner">Харилцагч олдоогүй</string>
    <string name="label_bank_statement_line_date">Огноо</string>
    <string name="label_bank_statement_line_ref">Гүйлгээний утга</string>
    <string name="label_bank_statement_line_amount">Дүн</string>

    <string name="title_activity_bank_statement">Төлбөрийн жагсаалт</string>
    <string name="title_activity_bank_statement_regist">Төлбөр бүртгэх</string>
    <string name="label_balance_amount">Төлбөрийн үлдэгдэл:</string>
    <string name="field_start_date">Эхлэх огноо</string>
    <string name="field_end_date">Дуусах огноо</string>

    <string name="label_receipt_product">Бараа</string>
    <string name="label_receipt_price_unit">Нэгж үнэ</string>
    <string name="label_receipt_qty">Тоо</string>
    <string name="label_receipt_subtotal">Дүн</string>
    <string name="company_name">"Сүлдэн тэнгэр хоршоо"</string>
    <string name="label_receipt_address">Хаяг: Баянхонгор аймаг</string>
    <string name="title_receipt">Зарлагын баримт</string>
    <string name="label_text_bank_account">Дансны дугаар:</string>
    <string name="footer_receipt_received">Хүлээн авсан: (Гарын үсэг)</string>
    <string name="footer_receipt_delivered">Хүлээлгэн өгсөн: </string>

</resources>
