<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_primary"
        android:minHeight="?attr/actionBarSize"
        android:paddingRight="@dimen/default_8dp"
        android:paddingTop="@dimen/statusBarHeight"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:theme="@style/AppBar.Dark"
        app:titleMarginStart="@dimen/default_16dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <odoo.controls.OForm
            android:id="@+id/customerPaymentForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            app:autoUIGenerate="true"
            app:modelName="transient.model">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <odoo.controls.OField
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dateFrom"
                    app:controlLabel="@string/field_start_date"
                    app:defaultFieldValue="now()"
                    app:fieldLabelColor="@color/theme_primary"
                    app:fieldName="date_from"
                    android:layout_weight="0.5"
                    app:fieldTextSize="@dimen/text_size_xmedium"
                    app:showIcon="false"/>
                <odoo.controls.OField
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dateTo"
                    app:controlLabel="@string/field_end_date"
                    app:defaultFieldValue="now()"
                    app:fieldLabelColor="@color/theme_primary"
                    app:fieldName="date_to"
                    android:layout_weight="0.5"
                    app:fieldTextSize="@dimen/text_size_xmedium"
                    app:showIcon="false"/>
            </LinearLayout>

        </odoo.controls.OForm>
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:layout_below="@+id/customerPaymentForm"
            android:layout_above="@+id/footer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@android:id/title"
                android:orientation="vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingBottom="@dimen/default_16dp">

                <odoo.controls.ExpandableListControl
                    android:id="@+id/bankStatementLineDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_8dp"
                    android:layout_marginTop="@dimen/default_8dp"
                    android:orientation="vertical"
                    android:visibility="visible">

                </odoo.controls.ExpandableListControl>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/labelLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|right"
                    android:padding="@dimen/default_8dp"
                    android:text="@string/label_sale_detail_total"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|right"
                    android:padding="@dimen/default_8dp"
                    android:text="@string/label_balance_amount"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/amountLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/totalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/default_8dp"
                    android:paddingTop="@dimen/default_8dp"
                    android:paddingRight="@dimen/default_16dp"
                    android:paddingBottom="@dimen/default_8dp"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/default_8dp"
                    android:paddingTop="@dimen/default_8dp"
                    android:paddingRight="@dimen/default_16dp"
                    android:paddingBottom="@dimen/default_8dp"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>